--- a/Mini-Projects/JobPortal Form Clone.html
+++ b/Mini-Projects/JobPortal Form Clone.html
@@ -31,12 +31,19 @@
     <section id="submitYourApplication" class="outerBox">
         <div class="innerBox padding20px">
             <div id="submitTitle">
-                <h2 class="fontXL fontDarkGray">SUBMIT YOUR APPLICATION</h2>
+                <h2 class="fontXL fontDarkGray fontWeight600">SUBMIT YOUR APPLICATION</h2>
             </div>
-            <div>
-                <h3>Resume/CV<span>*</span></h3>
-                <label for="files" class="btn">Attach Resume / CV</label>
-                <input id="files" style="visibility:hidden;" type="file">
+        </div>
+    </section>
+    <section id="SelectionMenu1" class="outerBox bgDarkGray">
+        <div class="innerBox">
+            <div class="inputMenu">
+                <div class="inputMenuSmall">
+                    <p>1</p>
+                </div>
+                <div class="inputMenuLarger">
+                    <p>123</p>
+                </div>
             </div>
         </div>
     </section>
