--- a/Mini-Projects/JobPortal Form Clone.html
+++ b/Mini-Projects/JobPortal Form Clone.html
@@ -67,12 +67,65 @@
     <section id="SelectionMenu3" class="outerBox bgDarkGray">
         <div class="innerBox MarginTop20px">
             <div class="inputMenu paddingTopBottom5px">
-                <div class="inputMenuSmall fontXL">
+                <div class="inputMenuSmall fontXL" id="pronoun">
                     <label for="fullName">Pronouns</label><br>
                 </div>
-                <div class="inputMenuLarger checkBox">
-                    <div class="checkBoxItem">
-
+                <div class="inputMenuLarger">
+                    <div class="checkBox">
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">He/him</p>
+                        </div>
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">She/her</p>
+                        </div>
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">They/them</p>
+                        </div>
+                    </div>
+                    <div class="checkBox">
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Xe/xem</p>
+                        </div>
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Ze/hir</p>
+                        </div>
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Ey/em</p>
+                        </div>
+                    </div>
+                    <div class="checkBox">
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Hir/hir</p>
+                        </div>
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Fae/faer</p>
+                        </div>
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Hu/hu</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="checkBox">
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Use name only</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="checkBox">
+                        <div class="checkBoxItem">
+                            <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                            <p class="fontLightGray">Custom</p>
+                        </div>
                     </div>
                 </div>
             </div>
