--- a/Mini-Projects/JobPortal Form Clone.html
+++ b/Mini-Projects/JobPortal Form Clone.html
@@ -117,7 +117,7 @@
                     <div class="checkBox">
                         <div class="checkBoxItem">
                             <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
-                            <p class="fontLightGray">Use name only</p>
+                            <p class="fontLightGray">Use Name only</p>
                         </div>
                     </div>
                     <hr>
