--- a/Mini-Projects/JobPortal Form Clone.html
+++ b/Mini-Projects/JobPortal Form Clone.html
@@ -66,8 +66,8 @@
     </section>
     <section id="SelectionMenu3" class="outerBox bgDarkGray">
         <div class="innerBox MarginTop20px">
-            <div class="inputMenu paddingTopBottom5px">
-                <div class="inputMenuSmall fontXL" id="pronoun">
+            <div class="paddingTopBottom5px" id="pronoun">
+                <div class="inputMenuSmall fontXL topPadding10px">
                     <label for="fullName">Pronouns</label><br>
                 </div>
                 <div class="inputMenuLarger">
