--- a/Mini-Projects/JobPortal Form Clone.html
+++ b/Mini-Projects/JobPortal Form Clone.html
@@ -30,7 +30,7 @@
     </section>
     <section id="submitYourApplication" class="outerBox bgDarkGray">
         <div class="innerBox padding20px">
-            <div id="submitTitle">
+            <div id="submitTitle" class="title">
                 <h2 class="fontXL fontDarkGray fontWeight600">SUBMIT YOUR APPLICATION</h2>
             </div>
         </div>
@@ -127,6 +127,97 @@
                             <p class="fontLightGray">Custom</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu4" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">Email<span class="asteriskRed"><sup>✱</sup></span></label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu5" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">Phone</label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu6" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">Current Location<span class="asteriskRed"><sup>✱</sup></span></label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu7" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">Current Company</label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Links" class="outerBox bgDarkGray">
+        <div class="innerBox padding20px">
+            <div id="linksTitle" class="title">
+                <h2 class="fontXL fontDarkGray fontWeight600">Links</h2>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu8" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">LinkedIn URL</label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu9" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">GitHub URL</label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu10" class="outerBox bgDarkGray">
+        <div class="innerBox MarginTop20px">
+            <div class="inputMenu paddingTopBottom5px">
+                <div class="inputMenuSmall fontXL">
+                    <label for="fullName">Portfolio URL</label><br>
+                </div>
+                <div class="inputMenuLarger">
+                    <input type="fullName" id="fullName" name="fullName" class="inputForm">
                 </div>
             </div>
         </div>
