--- a/Mini-Projects/JobPortal Form Clone.html
+++ b/Mini-Projects/JobPortal Form Clone.html
@@ -222,6 +222,34 @@
             </div>
         </div>
     </section>
+    <section class="outerBox bgDarkGray">
+        <div class="innerBox padding20px">
+            <div class="title">
+                <h2 class="fontXL fontDarkGray fontWeight600">SUPPLEMENTARY QUESTIONS</h2>
+            </div>
+        </div>
+    </section>
+    <section id="SelectionMenu11" class="outerBox bgDarkGray">
+        <div class="innerBox">
+            <div class="inputMenu2 paddingTopBottom5px">
+                <div class="inputMenuTop fontXL bottomPadding20px">
+                    <p>Language Skill(s) (Check all that apply)<span class="asteriskRed"><sup>✱</sup></span></p>
+                </div>
+                <div class="inputMenuTop">
+                    <div class="checkBoxItem2">
+                        <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                        <p class="fontLightGray">English (ENG)</p>
+                    </div>
+                </div>
+                <div class="inputMenuTop">
+                    <div class="checkBoxItem2">
+                        <input type="checkbox" name="checkbox_name" value="checkbox_value" class="check">
+                        <p class="fontLightGray">Spanish (SPA)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://kit.fontawesome.com/dc10f11ad9.js" crossorigin="anonymous"></script>
 </body>
 </html>
