--- a/Project-2 Time Table/src/index.html
+++ b/Project-2 Time Table/src/index.html
@@ -2,24 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AlgoCamp Time Table</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
     <header>
-
+        <h1 style="text-align: center">AlgoCamp Time Table</h1>
     </header>
-    <main>
-        <form action="" method="post">
-            <section>
-                <fieldset>
-                    <legend>
-                    </legend>
-                </fieldset>
-            </section>
-        </form>
+    <main >
+        <table>
+            <tr>
+                <th colspan="9">Time Table - I A</th>
+            </tr>
+            <tr>
+                <th>Day</th>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+                <th>Break</th>
+                <th>4</th>
+                <th>5</th>
+                <th>6</th>
+                <th>7</th>
+            </tr>
+        </table>
     </main>
     <footer>
-
+        <p style="text-align: left">* If any doubt contact class teacher!</p>
     </footer>
 </body>
 </html>
