--- a/Project-2 Time Table/src/index.html
+++ b/Project-2 Time Table/src/index.html
@@ -7,6 +7,7 @@
         table, th, td {
             border: 1px solid black;
             border-collapse: collapse;
+            padding: 5px 20px;
         }
     </style>
 </head>
@@ -14,26 +15,98 @@
     <header>
         <h1 style="text-align: center">AlgoCamp Time Table</h1>
     </header>
-    <main >
+    <main style="display: flex; justify-content: center; align-items: center">
         <table>
-            <tr>
-                <th colspan="9">Time Table - I A</th>
+            <tr style="background-color: lightyellow">
+                <th colspan="9" style="font-size: x-large">Time Table - I A</th>
             </tr>
-            <tr>
+            <tr style="text-align: center; background-color: lightcyan">
                 <th>Day</th>
                 <th>1</th>
                 <th>2</th>
                 <th>3</th>
-                <th>Break</th>
+                <th style="text-align: center">Break</th>
                 <th>4</th>
                 <th>5</th>
                 <th>6</th>
                 <th>7</th>
             </tr>
+            <tr style="text-align: center; font-weight: bold; background-color: lightsalmon">
+                <td>Time</td>
+                <td>8:30 - 9:10</td>
+                <td>9:10 - 9:50</td>
+                <td>9:50 - 10:30</td>
+                <td>10:30 - 10:50</td>
+                <td>10:50 - 11:30</td>
+                <td>11:30 - 12:05</td>
+                <td>12:05 - 12:40</td>
+                <td>12:40 - 1:15</td>
+            </tr>
+            <tr style="background-color: lightgrey">
+                <td style="background-color: lightpink">Monday</td>
+                <td>Hindi</td>
+                <td>Language Skill</td>
+                <td>Jazz</td>
+                <td rowspan="6" style="text-align: center; background-color: lightgreen">Break</td>
+                <td>Taekwondo</td>
+                <td>Skating / Horse Rinding</td>
+                <td>NU, Work</td>
+                <td>GK</td>
+            </tr>
+            <tr>
+                <td style="background-color: lightpink">Tuesday</td>
+                <td>Number Work</td>
+                <td>KYS</td>
+                <td>Computer</td>
+                <td>Sports</td>
+                <td>Language Skill</td>
+                <td>Hindi</td>
+                <td>Art</td>
+            </tr>
+            <tr style="background-color: lightgrey">
+                <td style="background-color: lightpink">Wednesday</td>
+                <td>Reading</td>
+                <td>Number Work</td>
+                <td>Music</td>
+                <td>KYS</td>
+                <td>Language Skill</td>
+                <td>Hindi</td>
+                <td>Computer</td>
+            </tr>
+            <tr>
+                <td style="background-color: lightpink">Thursday</td>
+                <td>Language Skill</td>
+                <td>Sports</td>
+                <td>Hindi</td>
+                <td>KYS</td>
+                <td>Jazz</td>
+                <td>Yoga</td>
+                <td>Number Work</td>
+            </tr>
+            <tr style="background-color: lightgrey">
+                <td style="background-color: lightpink">Friday</td>
+                <td>Creative Writing</td>
+                <td>KYS</td>
+                <td>Hindi</td>
+                <td>Number Work</td>
+                <td>Hula Hoop</td>
+                <td>Language Skill</td>
+                <td>Art</td>
+            </tr>
+            <tr>
+                <td style="background-color: lightpink">Saturday</td>
+                <td>KYS</td>
+                <td>Reading</td>
+                <td>Hindi</td>
+                <td>Language Skills</td>
+                <td>Number Work</td>
+                <td>Creative Writing</td>
+                <td>Library</td>
+            </tr>
         </table>
     </main>
     <footer>
-        <p style="text-align: left">* If any doubt contact class teacher!</p>
+        <p style="text-align: center">* If any doubt contact class teacher!</p>
     </footer>
 </body>
 </html>
