--- a/Project-1 Student Regestration Form/src/index.html
+++ b/Project-1 Student Regestration Form/src/index.html
@@ -39,7 +39,7 @@
                             <input type="text" id="lastName" name="lastName" required>
                         </div>
                         <div id="dobDiv" class="paddingTopBottom5px">
-                            <label for="dob">First Name: </label>
+                            <label for="dob">Date of Birth: </label>
                             <input type="date" id="dob" name="dob" required>
                         </div>
                         <div id="genderDiv" class="paddingTopBottom5px">
@@ -85,7 +85,7 @@
                         </div>
                         <div id="pinCodeDiv" class="paddingTopBottom5px">
                             <label for="pinCode">Zip Code: </label>
-                            <input type="number" id="pinCode" name="pinCode" maxlength="6" size="6" required>
+                            <input type="number" id="pinCode" name="pinCode" minlength="6" maxlength="6" size="6" required>
                         </div>
                     </div>
                 </fieldset>
