--- a/Project-1 Student Regestration Form/src/index.html
+++ b/Project-1 Student Regestration Form/src/index.html
@@ -113,7 +113,7 @@
                         </div>
                         <div id="yogDiv" class="paddingTopBottom5px">
                             <label for="yog">Year of Graduation: </label>
-                            <input type="number" id="yog" name="yog" maxlength="4" size="4" required>
+                            <input type="number" id="yog" name="yog" minlength="4" maxlength="4" size="4" required>
                         </div>
                     </div>
                 </fieldset>
